# H2Vk

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cmake.yml
assets/field/: oaktree.gltf  terrain_gridlines.gltf
shaders/: compile.sh  default_lit.frag  red_shader_base.vert  shader_base.frag  texture_lig.frag  tri_mesh.vert
src/: CMakeLists.txt  main.cpp  vk_buffer.cpp  vk_camera.cpp  vk_camera.h  vk_command_buffer.cpp  vk_command_pool.cpp  vk_command_pool.h  vk_descriptor_allocator.cpp  vk_descriptor_allocator.h  vk_descriptor_builder.cpp  vk_descriptor_builder.h  vk_descriptor_cache.cpp  vk_descriptor_cache.h  vk_descriptor_setlayouts.cpp  vk_descriptor_setlayouts.h  vk_device.cpp  vk_device.h  vk_engine.cpp  vk_engine.h  vk_fence.cpp  vk_fence.h  vk_frame.cpp  vk_frame.h  vk_framebuffers.cpp  vk_helpers.cpp  vk_helpers.h  vk_imgui.cpp  vk_imgui.h  vk_initializers.cpp  vk_initializers.h  vk_material.h  vk_mesh.cpp  vk_mesh.h  vk_mesh_manager.cpp  vk_mesh_manager.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderpass.cpp  vk_renderpass.h  (+8 more)
src/assets/: tmp.txt  vk_glb.h  vk_gltf.cpp  vk_gltf.h  vk_mesh.cpp  vk_mesh.h
src/components/camera/: vk_camera.cpp  vk_camera.h
src/components/lighting/: vk_light.cpp
src/components/model/: vk_glb.cpp  vk_gltf.cpp  vk_gltf2.cpp  vk_gltf2.h  vk_model.cpp  vk_model.h  vk_obj.cpp  vk_obj.h  vk_pbr_material.h  vk_poly.cpp  vk_poly.h
src/components/skybox/: vk_skybox.cpp  vk_skybox.h
src/core/: vk_buffer.cpp  vk_buffer.h  vk_camera.cpp  vk_camera.h  vk_command_buffer.cpp  vk_command_buffer.h  vk_command_pool.cpp  vk_command_pool.h  vk_descriptor_allocator.cpp  vk_descriptor_allocator.h  vk_descriptor_builder.cpp  vk_descriptor_builder.h  vk_descriptor_cache.cpp  vk_descriptor_cache.h  vk_descriptor_pools.cpp  vk_descriptor_pools.h  vk_descriptor_setlayouts.cpp  vk_device.cpp  vk_device.h  vk_engine.cpp  vk_engine.h  vk_fence.cpp  vk_fence.h  vk_framebuffers.cpp  vk_framebuffers.h  vk_helpers.h  vk_imgui.cpp  vk_imgui.h  vk_initializers.cpp  vk_initializers.h  vk_material.h  vk_mesh.h  vk_mesh_manager.cpp  vk_mesh_manager.h  vk_pipeline.cpp  vk_pipeline.h  vk_query_pool.cpp  vk_query_pool.h  vk_queue.cpp  vk_queue.h  (+17 more)
src/core/camera/: vk_camera.cpp  vk_camera.h
src/core/lighting/: vk_light.cpp  vk_light.h
src/core/manager/: vk_job_manager.cpp  vk_job_manager.h  vk_material_manager.cpp  vk_material_manager.h  vk_mesh_manager.cpp  vk_mesh_manager.h  vk_system_manager.cpp  vk_system_manager.h
src/core/model/: vk_glb.cpp  vk_glb.h  vk_gltf.cpp  vk_gltf.h  vk_mesh.cpp  vk_mesh.h  vk_model.cpp  vk_model.h  vk_obj.cpp  vk_obj.h  vk_pbr_material.h  vk_poly.cpp  vk_poly.h
src/core/skybox/: vk_skybox.cpp  vk_skybox.h
src/core/utilities/: vk_global.h  vk_helpers.cpp  vk_helpers.h  vk_initializers.cpp  vk_initializers.h  vk_performance.cpp  vk_performance.h  vk_resources.h  vk_types.h
src/ecs/: ecs.h
src/ecs/components/: camera.h  rigidbody.h  transform.h
src/ecs/systems/: vk_camera_system.cpp  vk_camera_system.h
src/scenes/: vk_scene.cpp  vk_scene.h  vk_scene_listing.cpp  vk_scene_listing.h
src/shaders/: compile.sh  default_lit.frag  light.frag  light.vert  mesh.vert  mesh_tex.vert  model_mesh.frag  model_mesh.vert  red_shader_base.frag  scene.frag  scene_tex.frag  shader_base.frag  shader_base.vert  texture_lig.frag  triangle.vert
src/shaders/atmosphere/: atmosphere.frag  constants.glsl  debug_quad.frag  functions.glsl  multiple_scattering.comp  multiple_scattering.frag  quad.vert  skybox.frag  skybox.vert  skyview.frag  transmittance.comp  transmittance.frag
src/shaders/atmosphere2/: atmosphere.frag
src/shaders/common/: brdf.glsl  constants.glsl  debug.glsl  filters.glsl  tonemaps.glsl
src/shaders/env_map/: brdf.comp  converter.frag  converter.vert  cube_map.vert  irradiance.comp  irradiance.frag  irradiance.vert  prefilter.frag
src/shaders/light/: light.frag  light.vert
src/shaders/mesh/: scene.frag  scene_tex.frag
src/shaders/pbr/: .gitattributes  pbr.frag  pbr.vert  pbr_ibl.frag  pbr_ibl.vert  pbr_ibl_cube.frag  pbr_ibl_tex.frag  pbr_ibl_tex.vert  pbr_ibp.frag  pbr_tex.frag  pbr_tex.vert  pbr_tex_cube.frag
src/shaders/shadow_map/: csm_debug_quad.frag  csm_debug_quad.vert  csm_offscreen.frag  csm_offscreen.vert  depth_debug_quad.frag  depth_debug_scene.frag  depth_debug_scene.vert  offscreen.frag  offscreen.vert  quad.frag  scene.frag  scene.vert  scene_debug.frag  shadow_map.frag
src/shaders/skybox/: skybox.frag  skybox.vert  skysphere.frag  skysphere.vert
src/techniques/: vk_atmosphere.cpp  vk_atmosphere.h  vk_cascaded_shadow_map.cpp  vk_cascaded_shadow_map.h  vk_env_map.cpp  vk_env_map.h  vk_shadow_map.cpp  vk_shadow_map.h
src/tools/: vk_atmosphere.cpp  vk_atmosphere.h  vk_env_map.cpp  vk_env_map.h  vk_shadow_map.cpp  vk_shadow_map.h
src/ui/: vk_imgui.cpp  vk_imgui.h  vk_imgui_controller.cpp  vk_imgui_controller.h  vk_imgui_wrapper.h
